demo-app/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app-test
  labels:
    argocd.argoproj.io/managed-by: "openshift-gitops"
