demo-app/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: demo-app-test
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8003
